<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zhuye.hougong.view.SettingsActivity">

    <RelativeLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/paihang_bg2"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/person_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/back"/>

        <TextView
            android:visibility="invisible"
            android:id="@+id/mywalot_zhuanqian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:text="发表"
            android:textColor="@color/white"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/mywalot_qianbao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="10dp"
            android:text="设置"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bangding"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/stting_bangding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:src="@mipmap/arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heimingdan"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/stting_heimingdan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:src="@mipmap/arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/yinshen"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />

            <ImageView
                android:id="@+id/stting_yinsehn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/open" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />


            <ImageView
                android:id="@+id/stting_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="6dp"
                android:src="@mipmap/arrow_right" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/setting_qingchu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qingchujilu"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/setting_qingchuhuancun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qingchuhuancun"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guanyu"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />


            <ImageView
                android:id="@+id/stting_guanyu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:src="@mipmap/arrow_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/setting_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="#666"
                android:textSize="@dimen/sp_16" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
